# todo-app

fastapi-todo/: pyproject.toml
fastapi-todo/fastapi_todo/: main.py  settings.py
fastapi-todo/fastapi_todo/database/: database.py
fastapi-todo/fastapi_todo/gui/: app.py
fastapi-todo/fastapi_todo/models/: models.py
fastapi-todo/tests/: test_main.py
