[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
pytest = "^8.1.1"
httpx = "^0.27.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
streamlit = "^1.32.2"
bcrypt = "^4.1.2"
status = "^0.2.5"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
